--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Diman198B.github.io/Calendar-Events",
   "name": "calendar",
   "version": "1.0.0",
   "private": true,
@@ -17,6 +18,7 @@
     "antd": "^5.6.4",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
@@ -28,6 +30,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
